# Dumroo-ai

./: README.md
client/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  render.yaml
client/src/: App.jsx  index.css
client/src/components/: ChatPanel.jsx  Dashboard.jsx  Header.jsx  MessageList.jsx  ResultsPanel.jsx  RoleSelector.jsx
client/src/lib/: apis.js  store.js
client/src/styles/: theme.css
server/: .env.example  .gitignore  access_control.py  config.py  main.py  pyproject.toml  query_agent.py  requirements.txt  utils.py
server/data/: students.csv
